change current file

--- a/Height & 3-Point Attempts.ipynb
+++ b/Height & 3-Point Attempts.ipynb
@@ -677,7 +677,7 @@
    "id": "c777d823",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***There are two rows belonging to Leo Westermann since he played for two teams in the 2020-2021 season. We won't analyze the teams, so let's combine his information.***</span>"
+    "<span style=\"color:green\">There are two rows belonging to Leo Westermann since he played for two teams in the 2020-2021 season. We won't analyze the teams, so let's combine his information.</span>"
    ]
   },
   {
