change current file

--- a/Height & 3-Point Attempts.ipynb
+++ b/Height & 3-Point Attempts.ipynb
@@ -677,7 +677,7 @@
    "id": "c777d823",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">There are two rows belonging to Leo Westermann since he played for two teams in the 2020-2021 season. We won't analyze the teams, so let's combine his information.</span>"
+    "<font color='green'>***There are two rows belonging to Leo Westermann since he played for two teams in the 2020-2021 season. We won't analyze the teams, so let's combine his information.***</font>"
    ]
   },
   {
@@ -1446,7 +1446,7 @@
    "id": "e12a4480",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Since we don't need a player-based success ranking and the number of players in the dataset is limited, I will ignore criteria such as the number of matches and high game time. I will use the information of players who have played over 10 minutes.***</span>"
+    "<div><span style=\"color:green\"><b>Since we don't need a player-based success ranking and the number of players in the dataset is limited, I will ignore criteria such as the number of matches and high game time. I will use the information of players who have played over 10 minutes.</b></span></div>"
    ]
   },
   {
