change current file

--- a/Height & 3-Point Attempts.ipynb
+++ b/Height & 3-Point Attempts.ipynb
@@ -677,7 +677,7 @@
    "id": "c777d823",
    "metadata": {},
    "source": [
-    "<font color='green'>***There are two rows belonging to Leo Westermann since he played for two teams in the 2020-2021 season. We won't analyze the teams, so let's combine his information.***</font>"
+    "***There are two rows belonging to Leo Westermann since he played for two teams in the 2020-2021 season. We won't analyze the teams, so let's combine his information.***"
    ]
   },
   {
@@ -1267,11 +1267,11 @@
    "id": "889aedb6",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***3PM :  3-Point Field Goals Made***</span>\n",
+    "<span style=\"color:purple\">***3PM :  3-Point Field Goals Made***</span>\n",
     "\n",
-    "<span style=\"color:green\">***3PA :  3-Point Field Goals Attempted***</span>\n",
+    "<span style=\"color:red\">***3PA :  3-Point Field Goals Attempted***</span>\n",
     "\n",
-    "<span style=\"color:green\">***3P% :  3-Point Field Goals Percentage (Success Rate)***</span>"
+    "<span style=\"color:blue\">***3P% :  3-Point Field Goals Percentage (Success Rate)***</span>"
    ]
   },
   {
