change current file

--- a/Height & 3-Point Attempts.ipynb
+++ b/Height & 3-Point Attempts.ipynb
@@ -1267,11 +1267,11 @@
    "id": "889aedb6",
    "metadata": {},
    "source": [
-    "<span style=\"color:purple\">***3PM :  3-Point Field Goals Made***</span>\n",
+    "<span style=\"color:purple\">3PM :  3-Point Field Goals Made</span>\n",
     "\n",
-    "<span style=\"color:red\">***3PA :  3-Point Field Goals Attempted***</span>\n",
+    "<span style=\"color:purple\">3PA :  3-Point Field Goals Attempted</span>\n",
     "\n",
-    "<span style=\"color:blue\">***3P% :  3-Point Field Goals Percentage (Success Rate)***</span>"
+    "<span style=\"color:purple\">3P% :  3-Point Field Goals Percentage (Success Rate)</span>"
    ]
   },
   {
@@ -1446,7 +1446,7 @@
    "id": "e12a4480",
    "metadata": {},
    "source": [
-    "<div><span style=\"color:green\"><b>Since we don't need a player-based success ranking and the number of players in the dataset is limited, I will ignore criteria such as the number of matches and high game time. I will use the information of players who have played over 10 minutes.</b></span></div>"
+    "<div><span style=\"color:purple\"><b>Since we don't need a player-based success ranking and the number of players in the dataset is limited, I will ignore criteria such as the number of matches and high game time. I will use the information of players who have played over 10 minutes.</b></span></div>"
    ]
   },
   {
@@ -2740,7 +2740,7 @@
    "id": "0e40452a",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***we have many zero attempts***</span>"
+    "<span style=\"color:blue\"><b>we have many zero attempts</b></span>"
    ]
   },
   {
@@ -2815,7 +2815,7 @@
    "id": "982dedb7",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***no outliers in the lower bound and there are only 3 outliers in the upper bound***</span>"
+    "<span style=\"color:purple\"><b>no outliers in the lower bound and there are only 3 outliers in the upper bound</b></span>"
    ]
   },
   {
@@ -2985,7 +2985,7 @@
    "id": "55cc9d10",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***the outliers are players in guard position and below 1.90 meters***</span>"
+    "<span style=\"color:purple\"><b>the outliers are players in guard position and below 1.90 meters</b></span>"
    ]
   },
   {
@@ -3178,7 +3178,7 @@
    "id": "fb73d56f",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***the outliers are power forwards and a guard and below two meters***</span>"
+    "<span style=\"color:purple\"><b>the outliers are power forwards and a guard and below two meters</b></span>"
    ]
   },
   {
@@ -3220,7 +3220,7 @@
    "id": "accbbae8",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***There is a negative correlation (relationship) between height and 3FG related columns/values.***</span>"
+    "<span style=\"color:purple\"><b>There is a negative correlation (relationship) between height and 3FG related columns/values.</b></span>"
    ]
   },
   {
@@ -4045,7 +4045,7 @@
    "id": "8138c0fb",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Players who did not make any attempts can be considered to take very little time, so we will check it out.***</span>"
+    "<span style=\"color:purple\"><b>Players who did not make any attempts can be considered to take very little time, so we will check it out.</b></span>"
    ]
   },
   {
@@ -4638,7 +4638,7 @@
    "id": "ba062173",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***nearly all of the players who didn't make any attempt are 'centers'.***</span>"
+    "<span style=\"color:purple\"><b>nearly all of the players who didn't make any attempt are 'centers'.</b></span>"
    ]
   },
   {
@@ -4686,7 +4686,7 @@
    "id": "de6e0de7",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***in the first graph: It's clear that 0_Attempts isn't just about Minutes.;***</span>"
+    "<span style=\"color:purple\"><b>in the first graph: It's clear that 0_Attempts isn't just about Minutes;</b></span>"
    ]
   },
   {
@@ -4694,7 +4694,7 @@
    "id": "b441ae38",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***in the second graph: When 0_Attempts are removed, it can be seen that the duration of the game per player is very close to each other.***</span>"
+    "<span style=\"color:purple\"><b>in the second graph: When 0_Attempts are removed, it can be seen that the duration of the game per player is very close to each other.</b></span>"
    ]
   },
   {
@@ -4742,7 +4742,7 @@
    "id": "2f2c9471",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***even after removing those with no attempt, the relational order between each height group doesn't change***</span>"
+    "<span style=\"color:purple\"><b>even after removing those with no attempt, the relational order between each height group doesn't change</b></span>"
    ]
   },
   {
@@ -4927,7 +4927,7 @@
    "id": "f2f619cb",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***there are three power forwards as an outlier***</span>"
+    "<span style=\"color:purple\"><b>there are three power forwards as an outlier</b></span>"
    ]
   },
   {
@@ -5043,7 +5043,7 @@
    "id": "5201e2ca",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Power Forward***</span>"
+    "<span style=\"color:purple\"><b>Power Forward</b></span>"
    ]
   },
   {
@@ -5565,7 +5565,7 @@
    "id": "5aeb2a9e",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***For the 211-223 height group, it is an expected result that almost half of the players in this group did not attempt 3-pointers.***</span>"
+    "<span style=\"color:purple\"><b>For the 211-223 height group, it is an expected result that almost half of the players in this group did not attempt 3-pointers.</b></span>"
    ]
   },
   {
@@ -5593,7 +5593,7 @@
    "id": "3164a79b",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Currently, we have created our data frame with players who have game time over ten minutes. Normally only a certain number of three-pointers should be analyzed in order to achieve accurate results in calculating success rates. But the number of the players in the dataset is limited, the analysis will be made for more than one condition. But in all cases zero attempts will not be included in the analysis.***</span>"
+    "<span style=\"color:purple\"><b>Currently, we have created our data frame with players who have game time over ten minutes. Normally only a certain number of three-pointers should be analyzed in order to achieve accurate results in calculating success rates. But the number of the players in the dataset is limited, the analysis will be made for more than one condition. But in all cases zero attempts will not be included in the analysis.</b></span>"
    ]
   },
   {
@@ -5677,7 +5677,7 @@
    "id": "03cee832",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***At Least One Attempt / At Least 10 Attempts***</span>"
+    "<span style=\"color:purple\"><b>At Least One Attempt / At Least 10 Attempts</b></span>"
    ]
   },
   {
@@ -6315,7 +6315,7 @@
    "id": "7826dc81",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***When we removed 0-Attempts, success rates get closer to each other. In the second condition, the last group has the highest success rate. But the last group also has the fewest players.***</span>"
+    "<span style=\"color:purple\"><b>When we removed 0-Attempts, success rates get closer to each other. In the second condition, the last group has the highest success rate. But the last group also has the fewest players.</b></span>"
    ]
   },
   {
@@ -7402,7 +7402,7 @@
    "id": "d3a74012",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Players who did not make any attempts can be considered to take very little time, so we will check it out again.***</span>"
+    "<span style=\"color:purple\"><b>Players who did not make any attempts can be considered to take very little time, so we will check it out again.</b></span>"
    ]
   },
   {
@@ -7995,7 +7995,7 @@
    "id": "2f0a9ef1",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***nearly all of the players who didn't make any attempt are 'centers'.***</span>"
+    "<span style=\"color:purple\"><b>nearly all of the players who didn't make any attempt are 'centers'.</b></span>"
    ]
   },
   {
@@ -8041,7 +8041,7 @@
    "id": "7026b338",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***for the 'Center' position, it seems that 0_Attempts is not related to Minutes;***</span>"
+    "<span style=\"color:purple\"><b>for the 'Center' position, it seems that 0_Attempts is not related to Minutes;</b></span>"
    ]
   },
   {
@@ -8049,7 +8049,7 @@
    "id": "261323ab",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***in the second graph: When 0_Attempts are removed, it is seen that the duration of the game per player is very close to each other. But we know that the last group also has the fewest players.***</span>"
+    "<span style=\"color:purple\"><b>in the second graph: When 0_Attempts are removed, it is seen that the duration of the game per player is very close to each other. But we know that the last group also has the fewest players.</b></span>"
    ]
   },
   {
@@ -8095,7 +8095,7 @@
    "id": "cae13bc5",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***even after removing those with no attempt, the relational order between each group doesn't change***</span>"
+    "<span style=\"color:purple\"><b>even after removing those with no attempt, the relational order between each group doesn't change</b></span>"
    ]
   },
   {
@@ -8176,7 +8176,7 @@
    "id": "8a301c45",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***It seems that there isn't a negative correlation between Height and 3PA for the 'Forward' position, let's check it out.***</span>"
+    "<span style=\"color:purple\"><b>It seems that there isn't a negative correlation between Height and 3PA for the 'Forward' position, let's check it out.</b></span>"
    ]
   },
   {
@@ -8598,7 +8598,7 @@
    "id": "da4f10e4",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Although the main duties of a power forward include posting up and setting screens, in today's modern basketball and in Euroleague, the power forward is a shooter, who can stretch their range all the way out to the 3-point line. That's why they are often called a stretch four if they are able to shoot from that distance. As clearly seen above there are a lot of stretch fours.***</span>"
+    "<span style=\"color:purple\"><b>Although the main duties of a power forward include posting up and setting screens, in today's modern basketball and in Euroleague, the power forward is a shooter, who can stretch their range all the way out to the 3-point line. That's why they are often called a stretch four if they are able to shoot from that distance. As clearly seen above there are a lot of stretch fours.</b></span>"
    ]
   },
   {
@@ -8809,7 +8809,7 @@
    "id": "1b96cff6",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***When we group the positions according to their height, we can see the negative relationship between height and 3-point attempts in general, with exceptions. However, since the number of groups is not equal, we cannot evaluate the relationship correctly. We still need to specifically review 'Forward'***</span>"
+    "<span style=\"color:purple\"><b>When we group the positions according to their height, we can see the negative relationship between height and 3-point attempts in general, with exceptions. However, since the number of groups is not equal, we cannot evaluate the relationship correctly. We still need to specifically review 'Forward'</b></span>"
    ]
   },
   {
@@ -9127,7 +9127,7 @@
    "id": "82ab884b",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***As seen above, these players are Power Forwards***</span>"
+    "<span style=\"color:purple\"><b>As seen above, these players are Power Forwards</b></span>"
    ]
   },
   {
@@ -9508,7 +9508,7 @@
    "id": "8adfc196",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Although they are in the 'Center' position, we know that many of them are actually power forwards.***</span>"
+    "<span style=\"color:purple\"><b>Although they are in the 'Center' position, we know that many of them are actually power forwards.</b></span>"
    ]
   },
   {
@@ -9811,7 +9811,7 @@
    "id": "3ef2e3f8",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***Alec Peters can play in the center position, but we know he is actually a power forward***</span>"
+    "<span style=\"color:purple\"><b>Alec Peters can play in the center position, but we know he is actually a power forward</b></span>"
    ]
   },
   {
@@ -9831,7 +9831,7 @@
    "id": "0c441e5d",
    "metadata": {},
    "source": [
-    "Zero attempts will not be included in the analysis."
+    "<span style=\"color:purple\"><b>Zero attempts will not be included in the analysis.</b></span>"
    ]
   },
   {
@@ -9910,7 +9910,7 @@
    "id": "9735e523",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***At Least One Attempt / At Least 10 Attempts***</span>"
+    "<span style=\"color:purple\"><b>At Least One Attempt / At Least 10 Attempts</b></span>"
    ]
   },
   {
@@ -10730,7 +10730,7 @@
    "id": "ff9f2b08",
    "metadata": {},
    "source": [
-    "<span style=\"color:green\">***When we removed 0-Attempts, success rates get closer to each other. In the second condition, the last group has the highest success rate. But the last group also has the fewest players and their 3-points attempts are less than the 3-point attempts of Guards and Forwards.***</span>"
+    "<span style=\"color:purple\"><b>When we removed 0-Attempts, success rates get closer to each other. In the second condition, the last group has the highest success rate. But the last group also has the fewest players and their 3-points attempts are less than the 3-point attempts of Guards and Forwards.</b></span>"
    ]
   },
   {
